tests/valid_programs/ducks/simple.duck
use go "fmt";

fn main() {
    let x: { s: String } = { s: "i am in a duck" };
    go {
        fmt.Println(x)
    }
}
