tests/errors/typechecker/require_tag_but_give_different_tag.duck
fn main() {
    let x: .yoo = .fff;
}
